# simple-http-server

./: .clang-format  .gitignore  CMakeLists.txt  README.md
http/: CMakeLists.txt
http/include/: http.h
http/src/: http.c
simple_http_server/src/: simple_http_server.c
socket_tcp_manager/: CMakeLists.txt
socket_tcp_manager/include/: socket_tcp_manager.h
socket_tcp_manager/src/: socket_tcp_manager.c
utils/: CMakeLists.txt
utils/include/: entry.h  hashmap.h  linked_list.h  map.h  queue.h  task.h  task_pool.h  utils.h  vector.h
utils/src/: hashmap.c  linked_list.c  queue.c  task.c  task_pool.c  vector.c
utils/test/: test_framework.h  test_hashmap.c  test_linked_list.c  test_queue.c  test_task.c  test_task_pool.c  test_utils.c  test_vector.c
